[gd_scene load_steps=9 format=3 uid="uid://b4nxvr5s4a7rk"]

[ext_resource type="Script" uid="uid://bt05ofhdhud74" path="res://scenes/ui/grades_scene.gd" id="1_1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.11, 0.15, 0.25, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.2, 0.25, 0.35, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4"]
bg_color = Color(0.15, 0.39, 0.61, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.9, 0.95, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="LabelSettings" id="LabelSettings_2"]
font_size = 18
font_color = Color(0.2, 0.3, 0.4, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3"]
font_size = 14
font_color = Color(0.4, 0.5, 0.6, 1)

[node name="GradesScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="Header" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="HeaderContent" type="HBoxContainer" parent="Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" type="Button" parent="Header/HeaderContent"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_4")
text = "‚Üê BACK"

[node name="Title" type="Label" parent="Header/HeaderContent"]
layout_mode = 2
text = "üìä GRADES (NOTEN)"
label_settings = SubResource("LabelSettings_1")

[node name="Spacer" type="Control" parent="Header/HeaderContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 100.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatsPanel" type="Panel" parent="MainContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3")

[node name="StatsContent" type="HBoxContainer" parent="MainContainer/StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2

[node name="OverallStats" type="VBoxContainer" parent="MainContainer/StatsPanel/StatsContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OverallTitle" type="Label" parent="MainContainer/StatsPanel/StatsContent/OverallStats"]
layout_mode = 2
text = "üìà Overall Performance"
label_settings = SubResource("LabelSettings_2")

[node name="OverallAverage" type="Label" parent="MainContainer/StatsPanel/StatsContent/OverallStats"]
layout_mode = 2
text = "Average: 4.8 / 6.0"
label_settings = SubResource("LabelSettings_3")

[node name="TotalPoints" type="Label" parent="MainContainer/StatsPanel/StatsContent/OverallStats"]
layout_mode = 2
text = "Total Points: +12.5"
label_settings = SubResource("LabelSettings_3")

[node name="RPGStats" type="VBoxContainer" parent="MainContainer/StatsPanel/StatsContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RPGTitle" type="Label" parent="MainContainer/StatsPanel/StatsContent/RPGStats"]
layout_mode = 2
text = "‚öîÔ∏è RPG Status"
label_settings = SubResource("LabelSettings_2")

[node name="HPInfo" type="Label" parent="MainContainer/StatsPanel/StatsContent/RPGStats"]
layout_mode = 2
text = "HP: 75/100 (Good grades heal!)"
label_settings = SubResource("LabelSettings_3")

[node name="XPInfo" type="Label" parent="MainContainer/StatsPanel/StatsContent/RPGStats"]
layout_mode = 2
text = "XP: 1250/2000 (Level 3)"
label_settings = SubResource("LabelSettings_3")

[node name="Spacer" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SubjectsContainer" type="VBoxContainer" parent="MainContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
